# pa-proyecto-tauri

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Readme.md  admin.cpp  banco.cpp  banco.h  justfile  library.cpp  package-lock.json  package.json  usuarios.cpp  utils.cpp  utils.h
cpp/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  admin.cpp  banco.cpp  banco.h  build.ninja  cmake_install.cmake  com.cpp  com.h  justfile  test.txt  test2.txt  test3.txt  usuarios.cpp  utils.cpp  utils.h
cpp/.cmake/api/v1/reply/: cache-v2-d5edc2d085aa27fd6f56.json  cmakeFiles-v1-853fe3cb6e73fe8b300e.json  codemodel-v2-b3da7c63df2e710bf40d.json  index-2022-04-11T04-34-31-0708.json  target-usuarios-af6e37e12585c809ac7c.json  toolchains-v1-55e08200cce0edeaba5c.json
front/: deudas.html  index.html  index2.html  index3.html  main.html  profile.html  register.html  table.html
front/assets/bootstrap/css/: bootstrap.min.css
front/assets/css/: custom.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: dep.rs  main.rs
src-tauri/users/: 5235009017965879  5435245269879362  5435600863484037
