[package]
name = "test"
version = "0.1.0"
description = "A Tauri App"
authors = ["AOx0 <aoxo.contact@gmail.com>"]
license = "MIT"
repository = "https://github.com/AOx0/pa-proyecto-tauri"
default-run = "test"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.5", features = [] }

[dependencies]
directories = "4.0.1"
smartstring = { version = "0.2.10", features = ["serde"] }
subprocess = "0.2.8"
lazy_static = "1.4.0"
serde_json = "1.0.79"
fs_extra = "1.2.0"
serde = { version = "1.0.136", features = ["derive"] }
tauri = { version = "1.0.0-rc.6", features = ["api-all", "macos-private-api"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
