[package]
name = "SuperBanco"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = "MIT"
repository = "https://github.com/AOx0/pa-proyecto-tauri"
default-run = "SuperBanco"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.9", features = [] }

[dependencies]
directories = "4.0.1"
lcy = { git="https://github.com/AOx0/lcy" }
smartstring = { version = "0.2.10", features = ["serde"] }
subprocess = "0.2.9"
lazy_static = "1.4.0"
serde_json = "1.0.81"
fs_extra = "1.2.0"
include_dir = "0.7.2"
serde = { version = "1.0.137", features = ["derive"] }
tauri = { version = "1.0.0-rc.11", features = ["api-all", "macos-private-api"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
